# HotSpot-MagicBlock

./: .gitignore  Anchor.toml  Cargo.toml  HotSpot_doc.md  txtx.yml
app/: package-lock.json  package.json  providers.tsx
app/app/: layout.tsx  page.tsx
app/components/: Game.tsx
app/lib/: constants.ts  number_rush.json  number_rush_types.ts  program.ts
crates/magicblock-permission-client/: Cargo.toml
programs/number-rush/: Cargo.toml
programs/number-rush/src/: constants.rs  errors.rs  lib.rs
programs/number-rush/src/instructions/: create_player_permission.rs  create_round_secret_permission.rs  delegate_game.rs  delegate_meta.rs  delegate_player.rs  end_game.rs  end_round.rs  init_game.rs  mod.rs  request_target.rs  spawn_player.rs  start_game.rs  submit_guess.rs  vrf_callback_set_target.rs
programs/number-rush/src/state/: game_config.rs  leaderboard.rs  mod.rs  player_guess.rs  player_state.rs  round_reveal.rs  round_secret.rs  vault.rs
runbooks/: README.md
runbooks/deployment/: main.tx
