[package]
name = "number-rush"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "=0.31.1"
ephemeral-rollups-sdk = { version = "=0.6.5", default-features = false, features = ["anchor", "solana-program"] }
