[package]
name = "number-rush"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "=0.8.0", features = ["anchor", "access-control"] }
ephemeral-vrf-sdk = { version = "=0.2.3", features = ["anchor"] }
